--- a/config/app_config.sample.yml
+++ b/config/app_config.sample.yml
@@ -1,8 +1,11 @@
 development:
-  email_domain: lists.funtaff.com
-
+  email_domain: lists.yourdomain.com
+  email_target_url: http://lists.yourdomain.com/emails
+  
 test:
-  email_domain: lists.loni.ucla.edu
+  email_domain: lists.yourdomain.com
+  email_target_url: http://lists.yourdomain.com/emails
 
 production:
-  email_domain: lists.loni.ucla.edu
+  email_domain: lists.yourdomain.com
+  email_target_url: http://lists.yourdomain.com/emails
