--- a/config/database.sample.yml
+++ b/config/database.sample.yml
@@ -1,7 +1,7 @@
 development:
   adapter: mysql
   encoding: utf8
-  database: loni_dlist_development
+  database: zlist_development
   username: root
   password:
   socket: /tmp/mysql.sock
